--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Marck+Script&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Luckiest+Guy&family=Marck+Script&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" href="./images/website_icon.jpg" />
@@ -50,7 +50,7 @@
         </p>
         <p class="body-1-3">
           So far i have completed
-          <span class="num-of-projects">14</span>projects and trained in
+          <span class="num-of-projects">15 &nbsp;</span>projects and trained in
           front-end development since 05/2022.
         </p>
       </div>
@@ -66,31 +66,40 @@
             >
           </li>
           <li class="body-2-2-2">
-            Frontend Mentor:<a target="_blank" href="">Click Here</a>
+            Frontend Mentor:
+            <a
+              target="_blank"
+              href="https://www.frontendmentor.io/profile/Mercury225"
+              >Click Here</a
+            >
           </li>
           <li class="body-2-2-3">
-            CSS Challenges:<a target="_blank" href="">Click Here</a>
+            CSS Challenges: <a target="_blank" href="">Click Here</a>
           </li>
           <li class="body-2-2-4">
-            CSS Battles:<a target="_blank" href="">Click Here</a>
+            CSS Battles: <a target="_blank" href="">Click Here</a>
           </li>
         </ul>
       </div>
       <div class="body-3-t-d">
         <h2 class="body-3-1">And here are my favorites :)</h2>
         <div class="body-3-2">
-          <a href="https://mercury225.github.io/charles-portfolio/"
+          <a
+            target="_blank"
+            href="https://mercury225.github.io/charles-portfolio/"
             ><img
               src="./images/animated-portfolio.jpg"
               alt="animated-portfolio"
           /></a>
-          <a href="https://mercury225.github.io/dust-galaxy/"
+          <a target="_blank" href="https://mercury225.github.io/dust-galaxy/"
             ><img src="./images/dust_galaxy.jpg" alt="dust_galaxy"
           /></a>
-          <a href="https://mercury225.github.io/low-poly-cottage/"
+          <a
+            target="_blank"
+            href="https://mercury225.github.io/low-poly-cottage/"
             ><img src="./images/low-poly-cottage.jpg" alt="low-poly-cottage"
           /></a>
-          <a href="https://www.uklo.org/"
+          <a target="_blank" href="https://www.uklo.org/"
             ><img src="./images/uklo.jpg" alt="uklo"
           /></a>
         </div>
@@ -99,7 +108,9 @@
         <p>
           Please get in touch on
           <a href="https://www.linkedin.com/in/charles-massingham/">Linkedin</a
-          >, or email
+          >, or
+
+          <a href="mailto:c.s.massingham@gmail.com">email</a>
         </p>
       </div>
     </main>
