--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </p>
         <p class="body-1-3">
           So far i have completed
-          <span class="num-of-projects">15 &nbsp;</span>projects and trained in
+          <span class="num-of-projects">16+ &nbsp;</span>projects and trained in
           front-end development since 05/2022.
         </p>
       </div>
@@ -59,6 +59,7 @@
         <ul class="body-2-2-t-d">
           <li class="body-2-2-1">
             GitHub:
+
             <a
               target="_blank"
               href="https://github.com/Mercury225?tab=repositories"
@@ -72,12 +73,6 @@
               href="https://www.frontendmentor.io/profile/Mercury225"
               >Click Here</a
             >
-          </li>
-          <li class="body-2-2-3">
-            CSS Challenges: <a target="_blank" href="">Click Here</a>
-          </li>
-          <li class="body-2-2-4">
-            CSS Battles: <a target="_blank" href="">Click Here</a>
           </li>
         </ul>
       </div>
@@ -101,6 +96,13 @@
           /></a>
           <a target="_blank" href="https://www.uklo.org/"
             ><img src="./images/uklo.jpg" alt="uklo"
+          /></a>
+          <a
+            target="_blank"
+            href="https://mercury225.github.io/entertainment-web-app/"
+            ><img
+              src="./images/entertainment-website.jpg"
+              alt="entertainment-challenge"
           /></a>
         </div>
       </div>
