changing SCSS to Sass

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="techstack-2-l-r">
           <p class="techstack-2-1">My techstack:</p>
           <p class="techstack-2-2">
-            HTML/CSS/SCSS/Vanilla JS/React.js/ Three.js/Wordpress/Photoshop
+            HTML/CSS/Sass/Vanilla JS/React.js/Three.js/Wordpress/Figma
           </p>
         </div>
       </div>
