new project completed

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
               src="./images/entertainment-website.jpg"
               alt="entertainment-challenge"
           /></a>
+          <a target="_blank" href="https://mercury225.github.io/pomodoro-app/"
+            ><img src="./images/pomodoro-app.jpg" alt="pomodoro-challenge"
+          /></a>
         </div>
       </div>
       <div class="body-4">
