--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
   </head>
   <body>
     <header>
-      <div class="profile-t-d">
+      <section
+        class="profl profl--left"
+        aria-label="profile name and overview"
+        aria-description="this is the left half of the first card saying my name, my role and an identifiable profile icon"
+      >
         <img
-          class="profile-1"
+          class="profl profl__img"
           src="./images/butterfly.jpg"
-          alt="butterfly-icon"
+          alt="profile icon showing a butterfly"
         />
-        <h2 class="profile-2">Zephyr_Grey</h2>
-        <h3 class="profile-3">Front End Developer</h3>
-      </div>
-      <div class="techstack-t-d">
+        <h1 class="profl [ profl__h h--name ]">Zephyr_Grey</h2>
+        <h2 class="profl [ profl__h h--role ]">Front End Developer</h3>
+        </section>
+      <div class="profl profl--right">
         <div class="techstack-1-l-r">
           <p class="techstack-1-1">My superpower:</p>
           <p class="techstack-1-2">CSS</p>
