--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1 class="profl [ profl--left__h h--name ]">Zephyr_Grey</h2>
         <h2 class="profl [ profl--left__h h--role ]">Front End Developer</h3>
         </section>
-      <div class="profl " aria-label = "Techstack and strongest programming language" aria-description="this is a list of the programming languages i'm familiar with ">
+      <div class="profl profl--right--div" aria-label = "Techstack and strongest programming language" aria-description="this is a list of the programming languages i'm familiar with ">
         <!-- ts is short for techstack, spwr is superpower, h is heading c is content-->
         <div class="profl [ profl--right ts--spwr ]" aria-description="superpower is my strongest language">
           <!-- <p class="profl [ profl--right ts--spwr__h ]">My superpower:</p> -->
@@ -76,7 +76,7 @@
         </p>
         <p class="body-1-3">
           So far i have completed
-          <span class="num-of-projects">17+ &nbsp;</span>projects and trained in
+          <span class="num-of-projects">18+ &nbsp;</span>projects and trained in
           front-end development since 05/2022.
         </p>
       </div>
@@ -132,6 +132,9 @@
           /></a>
           <a target="_blank" href="https://mercury225.github.io/pomodoro-app/"
             ><img src="./images/pomodoro-app.jpg" alt="pomodoro-challenge"
+          /></a>
+          <a target="_blank" href="https://mercury225.github.io/password-generator/"
+            ><img src="./images/password-generator.jpg" alt="password-generator"
           /></a>
         </div>
       </div>
