--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>z-g-portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-  
     <link
       href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&effect=fire&family=Luckiest+Guy&family=Marck+Script&display=swap"
       rel="stylesheet"
@@ -29,6 +27,15 @@
         />
         <h1 class="profl [ profl--left__h h--name ]">Zephyr_Grey</h2>
         <h2 class="profl [ profl--left__h h--role ]">Front End Developer</h3>
+          <figure class="profl [ profl--left__figure ]">
+            <a href="https://github.com/Mercury225?tab=repositoriesl" target="_blank" class=" [ profl--left__link ]">
+              <img src="./images/Github.svg" alt="github-icon">
+            </a>
+        
+            <a href="https://www.linkedin.com/in/charles-massingham/" target="_blank" class=" [ profl--left__link ]">
+              <img src="./images/LinkedIN.svg" alt="linkedin-icon">
+            </a>
+          </figure>
         </section>
       <div class="profl profl--right--div" aria-label = "Techstack and strongest programming language" aria-description="this is a list of the programming languages i'm familiar with ">
         <!-- ts is short for techstack, spwr is superpower, h is heading c is content-->
