changing look  more minimalistic

--- a/index.html
+++ b/index.html
@@ -71,26 +71,29 @@
         </div>
       </div>
     </header>
-    <main class="body-t-d">
-      <div class="body-1-t-d">
-        <p class="body-1-1">
+    <main class="profl--body">
+      <section class="profl--body__section" aria-description="Short description about me" aria-label="short description">
+
+        <!--stdes = short description-->
+        <p class="section__stdes">
           Front-End Developer from London. I enjoy healthy living and fitness,
           as well as language learning and computer games.
         </p>
-        <p class="body-1-2">
+        <p class="section__stdes">
           Just good teamwork and building. Constantly improving to be the best.
           I love challenging project work.
         </p>
-        <p class="body-1-3">
+        <p class="section__stdes">
           So far i have completed
-          <span class="num-of-projects">18+ &nbsp;</span>projects and trained in
+          <span class="stdes__num-of-projects">18+ &nbsp;</span>projects and trained in
           front-end development since 05/2022.
         </p>
-      </div>
-      <div class="body-2-t-d">
-        <h2 class="body-2-1">Coding profiles with all my project work</h2>
-        <ul class="body-2-2-t-d">
-          <li class="body-2-2-1">
+      </section>
+      <section class="profl--body__section"aria-description="active coding profiles where i display my projects" aria-label="coding profiles">
+        <!-- cprof = coding profiles-->
+        <h2 class="section__cprof section--header">Coding profiles with all my project work</h2>
+        <ul class="section__cprof [ cprof--list ]">
+          <li>
             GitHub:
 
             <a
@@ -99,7 +102,7 @@
               >Click Here</a
             >
           </li>
-          <li class="body-2-2-2">
+          <li>
             Frontend Mentor:
             
             <a
@@ -109,44 +112,35 @@
             >
           </li>
         </ul>
-      </div>
-      <div class="body-3-t-d">
-        <h2 class="body-3-1">And here are my favorites :)</h2>
-        <div class="body-3-2">
-          <a
-            target="_blank"
-            href="https://mercury225.github.io/charles-portfolio/"
-            ><img
-              src="./images/animated-portfolio.jpg"
-              alt="animated-portfolio"
-          /></a>
-          <a target="_blank" href="https://mercury225.github.io/dust-galaxy/"
-            ><img src="./images/dust_galaxy.jpg" alt="dust_galaxy"
-          /></a>
-          <a
-            target="_blank"
-            href="https://mercury225.github.io/low-poly-cottage/"
-            ><img src="./images/low-poly-cottage.jpg" alt="low-poly-cottage"
-          /></a>
-          <a target="_blank" href="https://www.uklo.org/"
-            ><img src="./images/uklo.jpg" alt="uklo"
-          /></a>
-          <a
-            target="_blank"
-            href="https://mercury225.github.io/entertainment-web-app/"
-            ><img
-              src="./images/entertainment-website.jpg"
-              alt="entertainment-challenge"
-          /></a>
-          <a target="_blank" href="https://mercury225.github.io/pomodoro-app/"
-            ><img src="./images/pomodoro-app.jpg" alt="pomodoro-challenge"
-          /></a>
-          <a target="_blank" href="https://mercury225.github.io/password-generator/"
-            ><img src="./images/password-generator.jpg" alt="password-generator"
-          /></a>
+      </section>
+      <section class="profl--body__section" aria-label="favourites" aria-description = "a list of my favourite projects and websites">
+        <!--fav = favorites-->
+        <h2 class="section__fav section--header">And here are my favorites :)</h2>
+        <div class="fav--grid">
+          <a target="_blank" href="https://mercury225.github.io/charles-portfolio/">
+            <img  src="./images/animated-portfolio.jpg"  alt="animated-portfolio"/>
+          </a>
+          <a target="_blank" href="https://mercury225.github.io/dust-galaxy/">
+            <img src="./images/dust_galaxy.jpg" alt="dust_galaxy"/>
+        </a>
+          <a target="_blank" href="https://mercury225.github.io/low-poly-cottage/">
+            <img src="./images/low-poly-cottage.jpg" alt="low-poly-cottage"/>
+          </a>
+          <a target="_blank"  href="https://www.uklo.org/">
+            <img src="./images/uklo.jpg" alt="uklo"/>
+          </a>
+          <a target="_blank" href="https://mercury225.github.io/entertainment-web-app/">
+            <img src="./images/entertainment-website.jpg" alt="entertainment-challenge"/>
+          </a>
+          <a target="_blank" href="https://mercury225.github.io/pomodoro-app/">
+            <img src="./images/pomodoro-app.jpg" alt="pomodoro-challenge"/>
+          </a>
+          <a target="_blank" href="https://mercury225.github.io/password-generator/">
+            <img src="./images/password-generator.jpg" alt="password-generator"/>
+          </a>
         </div>
-      </div>
-      <div class="body-4">
+      </section>
+      <section class="profl--body__section">
         <p>
           Please get in touch on
           <a href="https://www.linkedin.com/in/charles-massingham/">Linkedin</a
@@ -154,7 +148,7 @@
 
           <a href="mailto:c.s.massingham@gmail.com">email</a>
         </p>
-      </div>
+      </section>
     </main>
   </body>
 </html>
