changing look  more minimalistic

--- a/details.html
+++ b/details.html
@@ -13,5 +13,11 @@
     <link rel="icon" href="./images/website_icon.jpg" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!--All details and quick links-->
+<section aria-label="details and quick links" aria-description=" a quick navigation of all my projects and skill sets"class="section--header">
+
+</section>
+
+  </body>
 </html>
