added details page and other changes

--- a/details.html
+++ b/details.html
@@ -15,9 +15,214 @@
   </head>
   <body>
     <!--All details and quick links-->
-<section aria-label="details and quick links" aria-description=" a quick navigation of all my projects and skill sets"class="section--header">
+    <a href="./index.html">Back</a>
+    <section
+      aria-label="details and quick links"
+      aria-description=" a quick navigation of all my projects and skill sets"
+      class="details"
+    >
+      <h2>Project List: <span id="details__project-number"></span></h2>
+      <ul>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/pomodoro-app/"
+        >
+          <li class="details--content">Pomodoro app to beat procrastination</li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/entertainment-web-app/"
+        >
+          <li class="details--content">
+            Entertainment Video App with bookmarking and customised search bars
+          </li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/dust-galaxy/"
+        >
+          <li class="details--content">
+            Galaxy made of dust using particles in Three.js
+          </li>
+        </a>
+        <a class="details--links" href="https://www.uklo.org/">
+          <li class="details--content">
+            The UKLO Website: Language Competition in your school
+          </li>
+        </a>
+        <a class="details--links" href="https://mercury225.github.io/Natours/">
+          <li class="details--content">Nature Tourism Website</li>
+        </a>
+        <a class="details--links" href="https://mercury225.github.io/nexter/">
+          <li class="details--content">Nexter Website</li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/password-generator/"
+        >
+          <li class="details--content">Customisable password generator</li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/expenses-chart-component-main/"
+        >
+          <li class="details--content">Bar chart to represent expenses</li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/haunted-house/"
+        >
+          <li class="details--content">
+            First player exploration around a haunted house
+          </li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/low-poly-cottage/"
+        >
+          <li class="details--content">Low poly cottage 3D environment</li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/charles-portfolio/"
+        >
+          <li class="details--content">
+            Portfolio remake using text animations and color transitions
+          </li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/monsters-rolodex/"
+        >
+          <li class="details--content">Search bar for monsters</li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/qr-code-component-main/"
+        >
+          <li class="details--content">QR code card template</li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/Single-Price-Grid-Component/"
+        >
+          <li class="details--content">
+            Single price grid component with a shapes background
+          </li>
+        </a>
+        <a class="details--links" href="https://mercury225.github.io/skills/">
+          <li class="details--content">Check out my certifications!</li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/space-tourism/"
+        >
+          <li class="details--content">Space Tourism Website</li>
+        </a>
+        <a class="details--links" href="https://mercury225.github.io/Tabular/">
+          <li class="details--content">
+            Tabular: Sort unorganised data into a table
+          </li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/the-mysterious-table/"
+        >
+          <li class="details--content">3D modelling of a table</li>
+        </a>
+        <a class="details--links" href="https://mercury225.github.io/trillo/">
+          <li class="details--content">Trillo Website</li>
+        </a>
+      </ul>
+      <h2>What i can do really well with HTML/CSS/JS and libraries:</h2>
 
-</section>
+      <h3>HTML and CSS</h3>
 
+      <ul>
+        <li>Create Navigation Bars/Dropdown-lists with responsive design</li>
+        <li>Custom Fonts ( including font effects from Google Fonts)</li>
+        <li>Responsive Design for Phone/Tablet using @media</li>
+        <li>Semantic HTML code and BEM naming conventions</li>
+        <li>Create Multi-Page Websites</li>
+        <li>Implement Flex/Grid CSS standards</li>
+        <li>Use Sass with functions, variable coding and mixins</li>
+        <li>Creating custom SVG Images</li>
+        <li>Display and manipulate images and videos of varying sizes</li>
+        <li>
+          Border and Background Coloring ( include transparency, saturation,
+          brightness changes)
+        </li>
+        <li>Color profiling ( using color wheels)</li>
+        <li>
+          Text Animations, Hover Animations, Transform Animations (Moving and
+          Fading)
+        </li>
+        <li>Customised links</li>
+        <li>Create Forms to fill out, with procedural steps</li>
+        <li>Create Login forms and registration</li>
+        <li>Create tables to neatly display information</li>
+        <li>Create user profiles</li>
+        <li>Divide a web page into sections with related content</li>
+        <li>Adding QR codes</li>
+      </ul>
+      <h3>Javascript and libraries</h3>
+      <ul>
+        <li>Import and manipulate json files across all platforms</li>
+        <li>
+          Using Event Listeners to manipulate the DOM (HTML script) and create
+          control panels and button handlers
+        </li>
+        <li>Mathematical calculations and data manipulation</li>
+        <li>Using HTML Canvas to draw 2D images</li>
+        <li>Creating Timers</li>
+        <li>
+          Bookmarking and using localStorage to store user preferences for
+          retrieval later
+        </li>
+        <li>
+          Introduce different color and font themes with a settings button panel
+        </li>
+        <li>Create charts to represent data</li>
+        <li>Perform data cleaning into tables</li>
+        <li>Generating secure and randomised passwords</li>
+        <li>Add music and sound effects to a website</li>
+        <li>
+          Create customised search bars for searching and sorting different
+          categories
+        </li>
+      </ul>
+
+      <h3>3D Design using Three.js and Blender</h3>
+      <ul>
+        <li>Create Low poly (cartoon) environment worlds</li>
+        <li>Use particles to create galaxies</li>
+        <li>First person view gaming environments</li>
+      </ul>
+      <h3>Github</h3>
+      <ul>
+        <li>
+          Collaborate on repositories, using commands like git push, git pull,
+          git clone, initialising local repositiories, forking repositories and
+          creating branches for pull requests
+        </li>
+        <li>Creating websites from Git Pages</li>
+      </ul>
+      <h3>Other skills:</h3>
+      <ul>
+        <li>
+          Writing content for the website including introductions, short
+          descriptions, titles, headings and subheadings & reports.
+        </li>
+        <li>Reorganising and cleaning the website architecture</li>
+        <li>Designing whole page interfaces on websites</li>
+        <li>Graphic Design in photo collage</li>
+        <li>
+          Using CMS sites like Wordpress with plugins and templates to create
+          websites
+        </li>
+        <li>Website maintenance, updating and management</li>
+      </ul>
+    </section>
+    <script type="module" src="repository.js"></script>
   </body>
 </html>
