--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <section class="profl--body__section" aria-label="favourites" aria-description = "a list of my favourite projects and websites">
         <!--fav = favorites-->
         <h2 class="section__fav section--header">And here are my favorites :)</h2>
-        <div class="fav--grid">
+        <div class="fav--grid-and-details"> <div class="fav--grid">
           <a target="_blank" href="https://mercury225.github.io/charles-portfolio/">
             <img  src="./images/animated-portfolio.jpg"  alt="animated-portfolio"/>
           </a>
@@ -139,6 +139,8 @@
             <img src="./images/password-generator.jpg" alt="password-generator"/>
           </a>
         </div>
+      <a href="./details.html"><h4>Click for the full list of projects </h4></a></div>
+       
       </section>
       <section class="profl--body__section">
         <p>
@@ -150,5 +152,6 @@
         </p>
       </section>
     </main>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
