refining details and cleaning up

--- a/details.html
+++ b/details.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="./images/website_icon.jpg" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="details.css" />
   </head>
   <body>
     <!--All details and quick links-->
@@ -22,7 +22,7 @@
       class="details"
     >
       <h2>Project List: <span id="details__project-number"></span></h2>
-      <ul>
+      <ul class="details--list">
         <a
           class="details--links"
           href="https://mercury225.github.io/pomodoro-app/"
@@ -61,6 +61,12 @@
           href="https://mercury225.github.io/password-generator/"
         >
           <li class="details--content">Customisable password generator</li>
+        </a>
+        <a
+          class="details--links"
+          href="https://mercury225.github.io/space-tourism/"
+        >
+          <li class="details--content">Space Tourism Website</li>
         </a>
         <a
           class="details--links"
@@ -113,12 +119,6 @@
         <a class="details--links" href="https://mercury225.github.io/skills/">
           <li class="details--content">Check out my certifications!</li>
         </a>
-        <a
-          class="details--links"
-          href="https://mercury225.github.io/space-tourism/"
-        >
-          <li class="details--content">Space Tourism Website</li>
-        </a>
         <a class="details--links" href="https://mercury225.github.io/Tabular/">
           <li class="details--content">
             Tabular: Sort unorganised data into a table
@@ -134,11 +134,11 @@
           <li class="details--content">Trillo Website</li>
         </a>
       </ul>
-      <h2>What i can do really well with HTML/CSS/JS and libraries:</h2>
+      <h2>What i can do really well with HTML / CSS / JS and libraries:</h2>
 
       <h3>HTML and CSS</h3>
 
-      <ul>
+      <ul class="details--list">
         <li>Create Navigation Bars/Dropdown-lists with responsive design</li>
         <li>Custom Fonts ( including font effects from Google Fonts)</li>
         <li>Responsive Design for Phone/Tablet using @media</li>
@@ -166,7 +166,7 @@
         <li>Adding QR codes</li>
       </ul>
       <h3>Javascript and libraries</h3>
-      <ul>
+      <ul class="details--list">
         <li>Import and manipulate json files across all platforms</li>
         <li>
           Using Event Listeners to manipulate the DOM (HTML script) and create
@@ -193,13 +193,13 @@
       </ul>
 
       <h3>3D Design using Three.js and Blender</h3>
-      <ul>
+      <ul class="details--list">
         <li>Create Low poly (cartoon) environment worlds</li>
         <li>Use particles to create galaxies</li>
         <li>First person view gaming environments</li>
       </ul>
       <h3>Github</h3>
-      <ul>
+      <ul class="details--list">
         <li>
           Collaborate on repositories, using commands like git push, git pull,
           git clone, initialising local repositiories, forking repositories and
@@ -208,7 +208,7 @@
         <li>Creating websites from Git Pages</li>
       </ul>
       <h3>Other skills:</h3>
-      <ul>
+      <ul class="details--list">
         <li>
           Writing content for the website including introductions, short
           descriptions, titles, headings and subheadings & reports.
