--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
           <a target="_blank" href="https://mercury225.github.io/password-generator/">
             <img src="./images/password-generator.jpg" alt="password-generator"/>
           </a>
+          <a target="_blank" href="https://mercury225.github.io/space-tourism/">
+            <img src="./images/space-tourism.jpg" alt="space-tourism"/>
+          </a>
         </div>
       <a href="./details.html"><h4>Click for the full list of projects </h4></a></div>
        
