--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           src="./images/butterfly.jpg"
           alt="profile icon showing a butterfly"
         />
-        <h1 class="profl [ profl--left__h h--name ]">Zephyr_Grey</h2>
+        <h1 class="profl [ profl--left__h h--name ]">zephyr_grey</h2>
         <h2 class="profl [ profl--left__h h--role ]">Front End Developer</h3>
           <figure class="profl [ profl--left__figure ]">
             <a href="https://github.com/Mercury225?tab=repositoriesl" target="_blank" class=" [ profl--left__link ]">
